fix(components): fix style components and readability

--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,7 @@
 body {
-  color: rgba(0, 0, 0, 0.65);
+  color: rgb(0, 0, 0);
   font-size: 14px;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, PingFang SC, Hiragino Sans GB,
-    Microsoft YaHei, Helvetica Neue, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji,
-    Segoe UI Symbol;
+  font-family: 'Cousine', monospace;
   font-variant: tabular-nums;
   line-height: 1.5;
   font-feature-settings: 'tnum';
@@ -25,6 +23,7 @@ ul {
   height: 120px;
 }
 
+/** MODAL WINDOWS */
 li {
   display: flex;
   flex-direction: column;
@@ -32,10 +31,10 @@ li {
   justify-content: center;
   margin: 0 5px;
   padding: 6px 0;
-  width: 90px;
+  width: 120px;
   height: 100px;
-  background-color: #fff;
-  border: 1px solid #b7bcc2;
+  background-color: #ffff;
+  border: 3px solid #6f6f6f;
   border-radius: 15px;
   list-style: none;
   cursor: pointer;
@@ -54,9 +53,7 @@ li {
 .left strong {
   display: block;
   margin-bottom: 12px;
-  font-family: DIN Alternate, PingFang SC, Chinese Quote, -apple-system, BlinkMacSystemFont,
-    Segoe UI, Hiragino Sans GB, Microsoft YaHei, Helvetica Neue, Helvetica, Arial, sans-serif,
-    Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+  font-family: 'Cousine', monospace;
   font-size: 35px;
   font-weight: 400;
   line-height: 30px;
@@ -70,10 +67,11 @@ li {
   line-height: 10px;
 }
 
+/*  FIRST BOX */
 li:nth-child(1) .left > strong,
 li:nth-child(1) {
-  color: #00c718;
-  border-color: #00c718;
+  color: #DA1E28;
+  border-color: #DA1E28;
 }
 
 li:nth-child(2) .left > strong,
@@ -90,8 +88,8 @@ li:nth-child(3) {
 
 li:nth-child(4) .left > strong,
 li:nth-child(4) {
-  color: #9160f2;
-  border-color: #9160f2;
+  color: #6f6f6f;
+  border-color: #6f6f6f;
 }
 
 .selected:nth-child(1) {
@@ -112,9 +110,9 @@ li:nth-child(4) {
 
 .update {
   text-align: center;
-  font-weight: 350;
-  color: #656976;
-  font-size: 12px;
+  font-weight: 400;
+  color: #393939;
+  font-size: 14;
   line-height: 12px;
 }
 
